# caculator

./: CMakeLists.txt  README.md  caculator.cpp  caculator.h  widget.cpp  widget.h  widget.ui
